# tidaro-experiments

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  tictl.py
docs/: notifications.md
docs/dockerization/: build_and_run.md
docs/dockerization/example/: cron.txt  my.env
docs/dockerization/example/config/: logging.toml
tidarator/: config.py  log_config.py  logging.toml
tidarator/actions/: action_base.py
tidarator/api/: auth.py  session_base.py  session_desk.py  session_spot.py  utils.py
tidarator/notifiers/: dummy.py  gmail.py  utils.py
tidarator/spots/: book_free_spots.py  book_spot.py  bookings_manager.py  release_spot.py  show_bookings.py  show_state.py  spot_manager.py  zone_manager.py
